
[package]
authors = ["toddynnn"]
edition = "2021"
name    = "udpqueue"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.5.2"

  [dependencies.napi]
  features = ["napi6"]
  version  = "3.8.3"

  [dependencies.socket2]
  features = ["all"]
  version  = "0.6.3"

[target."cfg(target_os = \"linux\")".dependencies]
libc = "0.2.183"

[target."cfg(windows)".dependencies.windows-sys]
features = ["Win32_Media_Multimedia", "Win32_System_Threading"]
version  = "0.61.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto       = true
opt-level = 3
