
[package]
authors = ["toddynnn"]
edition = "2021"
name    = "udpqueue"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
napi-derive = "3.5.4"

  [dependencies.napi]
  features = ["napi6"]
  version  = "3.8.5"

  [dependencies.socket2]
  features = ["all"]
  version  = "0.6.3"

[target."cfg(target_os = \"linux\")".dependencies]
libc = "0.2.183"

[target."cfg(windows)".dependencies.windows-sys]
features = ["Win32_Media_Multimedia", "Win32_System_Threading"]
version  = "0.61.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto       = true
opt-level = 3
